# jmcwatch

./: .gitignore  README.md  bash.exe.stackdump  build.bat  main.hjmc  pyproject.toml  requirements.txt  setup.py  test.bat  upload.bat
jmcwatch/: __init__.py  __main__.py  cli.py  compile_jmc.sh
jmcwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
