[project.dynamic]
name = "jmcwatch"
version = "1.5.3"
authors = []
readme = './README.md'
[tool.poetry.dependencies]
click = "^8.1.7"
watchdog = "^1.1.0"
example-package = {git = "https://github.com/WingedSeal/jmc/tree/b217e7a0344a7151898da9bdc58377881a455ead/src"}
scripts = {'jmcwatch'='jmcwatch.cli:main'}
license = { text = "MIT" }
description = "Compile JMC code on save. Simply type `jmcwatch` to use."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amawdiin/jmcwatch"
Issues = "https://github.com/amawdiin/jmcwatch/issues"